# gst-signalling-py

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  pytest.yml  unit_tests.yml
scripts/git_hooks/: pre-commit
src/example/: README.md  get_producer_list.py  listener.py
src/example/datachannel-cli/: README.rst  cli.py
src/example/datachannel-single-producer-multiple-consumer/: README.md  consumer.py  producer.py
src/example/gstreamer_consumer/: gstreamer_consumer.py
src/example/videostream-cli/: README.rst  cli.py
src/examples/: README.md  listener.py  simple_recorder.py
src/examples/datachannel-single-producer-multiple-consumer/: consumer.py
src/examples/gstreamer_consumer/: README.md
src/examples/recorder/: Dockerfile  simple_recorder.py
src/gst_signalling/: __init__.py  aiortc_adapter.py  gst_abstract_role.py  gst_consumer.py  gst_listener.py  gst_producer.py  gst_signalling.py  utils.py
tests/: conftest.py  test_a_list_producers.py  test_consumer.py  test_import.py  test_list_producers.py  test_producer.py
tests/basic/: conftest.py  test_a_list_producers.py  test_consumer.py  test_producer.py
tests/data/: test_data.py
