[metadata]
name = gst-signalling
version = 0.1.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/gst-signalling-py
description = Python implementation of the gstreamer signalling protocol
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =src
install_requires =
    aiortc
    numpy
    pyee
    websockets
    PyGObject==3.42.2

[options.packages.find]
where=src

[options.extras_require]
dev = black==23.3.0
      flake8==6.0.0
      pytest==7.3.1
      coverage==7.2.5
      mypy==1.0.0
      pygobject-stubs==2.10.0

[options.entry_points]
console_scripts = 
    gst-webrtc-producer-list = example.get_producer_list:main


[flake8]
exclude = tests,src/example/videostream-cli
max-line-length = 128
extend-ignore = E203
max-complexity = 10
per-file-ignores =
    src/gst_signalling/gst_abstract_role.py:E402

[coverage:run]
branch=True

[coverage:report]
show_missing=True

[mypy]
ignore_missing_imports = True
exclude = (tests|src/example/videostream-cli|src/example/datachannel-cli)
strict = True
plugins = numpy.typing.mypy_plugin
explicit_package_bases = True