[metadata]
name = gst-signalling
version = 1.1.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/gst-signalling-py
description = Python implementation of the gstreamer signalling protocol
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =src
install_requires =
    numpy>=1.24.0,<=1.26.4
    pyee==11.0.1
    websockets<12.0.0
    PyGObject>=3.42.2, <=3.49.0

[options.packages.find]
where=src

[options.extras_require]
dev = black==23.10.1
      flake8==6.1.0
      mypy==1.6.1
      isort==5.12.0
      pygobject-stubs==2.10.0
      pytest==7.4.3
      pytest-asyncio==0.24.0a0
      coverage==7.3.2

[options.entry_points]
console_scripts = 
    gst-webrtc-producer-list = example.get_producer_list:main


[flake8]
exclude = tests,src/example/videostream-cli
max-line-length = 128
extend-ignore = E203
max-complexity = 10


[coverage:run]
branch=True

[coverage:report]
show_missing=True

[mypy]
ignore_missing_imports = True
exclude = (tests|src/example/videostream-cli|src/example/datachannel-cli)
strict = True
plugins = numpy.typing.mypy_plugin
explicit_package_bases = True

[tool:pytest]
asyncio_mode = auto
asyncio_default_fixture_loop_scope = session